[tool.poetry]
name = "pyper"
version = "0.1.0"
description = ""
authors = ["Bastian Rieck <bastian.rieck@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = "^1.18.1"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
